@@ -1,3 +1,5 @@
+	- The reference had the wrong label for XML_SetStartNamespaceDecl.
+	  Reported by an anonymous user.
 Release 1.95.0 Fri Sep 29 2000
 	- XML_ParserCreate_MM
 		Allows you to set a memory management suite to replace the
